// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourceOverview ResourceOverview renders  1`] = `
<div
  className="overview-content"
  id="resource-overview"
>
  <div
    className="app-info-and-dashboard-links"
  >
    <span
      className="app-info-and-dashboard-links-separator-f"
    />
  </div>
  <div
    className="overview-content-bottom overview-content-with-padding"
  >
    <div
      className="overview-content-header"
    >
      Resource highlights
    </div>
    <div
      className="overview-cards-info-container"
    >
      <div
        className="overview-cards-info single-app"
      >
        <div
          className="single-card clickable card-margin"
          id="0_overviewCardsData"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="card-count"
          >
            1
          </div>
          <div
            className="card-type"
          >
            Subscription
          </div>
          <div
            className="card-text"
          >
            On hub cluster
          </div>
          <div
            className="row-divider"
          />
          <div
            className="card-subtext"
          >
            0 failed
          </div>
          
        </div>
        <div
          className="column-divider"
        />
        <div
          className="single-card clickable card-margin"
          id="1_overviewCardsData"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="card-count"
          >
            1
          </div>
          <div
            className="card-type"
          >
            Managed cluster
          </div>
          <div
            className="card-text"
          >
            1 Total subscription
          </div>
          <div
            className="row-divider"
          />
          <div
            className="card-subtext"
          >
            0 failed
          </div>
          
        </div>
        <div
          className="column-divider"
        />
        <div
          className="single-card clickable card-margin"
          id="2_overviewCardsData"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="card-count"
          >
            3
          </div>
          <div
            className="card-type"
          >
            Pods
          </div>
          <div
            className="card-text"
          />
          <div
            className="row-divider"
          />
          <div
            className="card-subtext"
          >
            3 running
          </div>
          <div
            className="card-subtext"
          >
            0 failed
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="overview-content-bottom overview-content-with-padding"
  >
    <div
      className="resourceDiagramSourceContainer"
    >
      <div
        className="topology-controls"
      >
        <div
          className="topology-control-container"
        >
          <div
            id="search-textbox-portal-id"
          />
        </div>
      </div>
      <div
        className="resource-toolbar"
        id="resource-toolbar"
      >
        <div
          className="resource-toolbar-container"
        >
          <div
            className="resource-toolbar-buttons"
          >
            <div
              id="assorted-filter-open-portal-id"
            />
          </div>
          <div
            id="assorted-filter-close-portal-id"
          />
        </div>
      </div>
      <div
        className="resourceDiagramControlsContainer"
      >
        <div
          className="diagram-title"
        >
          Resource topology
          <svg
            className="diagram-title-divider"
          >
            <rect />
          </svg>
          <span
            className="how-to-read-text"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            How to read topology
            <svg
              className="how-to-read-icon"
            >
              <use
                href="#diagramIcons_sidecar"
              />
            </svg>
          </span>
        </div>
        <div
          className="topologyDiagramContainer"
        >
          <div
            className="refresh-time-div"
          >
            <div
              className="refresh-time-container"
            >
              <div
                className="reloading-container"
              >
                <div
                  aria-live="assertive"
                  className="bx--loading bx--loading--small"
                >
                  <svg
                    className="bx--loading__svg"
                    viewBox="-75 -75 150 150"
                  >
                    <circle
                      cx="0"
                      cy="0"
                      r="37.5"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="refresh-time-selection"
              >
                <div
                  aria-label="Refresh"
                  className="button"
                  id="refreshButton"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Refresh"
                >
                  <svg
                    className="button-icon"
                  >
                    <use
                      href="#diagramIcons_autoRefresh"
                    />
                  </svg>
                </div>
                <div
                  aria-label="Choose refresh"
                  className="bx--dropdown selection bx--list-box"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="listbox"
                  tabIndex="0"
                >
                  <div
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="open menu"
                    className="bx--list-box__field"
                    data-toggle={true}
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex="0"
                    type="button"
                  >
                    <span
                      className="bx--list-box__label"
                      htmlFor="refreshDropdown-input"
                    >
                      Disable refresh
                    </span>
                    <div
                      className="bx--list-box__menu-icon"
                    >
                      <svg
                        alt="Open menu"
                        aria-label="Open menu"
                        fillRule="evenodd"
                        height="5"
                        role="img"
                        viewBox="0 0 10 5"
                        width="10"
                      >
                        <title>
                          Open menu
                        </title>
                        <path
                          d="M0 0l5 4.998L10 0z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                Last update: {0}
              </div>
            </div>
          </div>
          <div
            className="diagramViewerDiagram"
          >
            <div
              className="diagramViewerContainerContainer"
              id="diagram-viewer-container-container"
            >
              <div
                aria-label="zoom"
                className="diagramViewerContainer"
                role="region"
                style={
                  Object {
                    "height": "100%",
                    "width": "100%",
                  }
                }
              >
                <svg
                  className="topologyDiagram"
                  id="topologySvgId"
                />
              </div>
              <div
                className="secondaryLoad"
              >
                <div
                  aria-live="assertive"
                  className="bx--loading"
                >
                  <svg
                    className="bx--loading__svg"
                    viewBox="-75 -75 150 150"
                  >
                    <circle
                      cx="0"
                      cy="0"
                      r="37.5"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="layoutLoadingContainer"
              >
                <div
                  aria-live="assertive"
                  className="bx--loading"
                >
                  <svg
                    className="bx--loading__svg"
                    viewBox="-75 -75 150 150"
                  >
                    <circle
                      cx="0"
                      cy="0"
                      r="37.5"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              className="diagramControls"
            >
              <div
                className="diagram-controls"
              >
                <div
                  aria-label="Zoom in"
                  className="zoom-in-button rectangle-zoom"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Zoom in"
                >
                  <svg
                    className="icon"
                  >
                    <use
                      href="#diagramIcons_zoomIn"
                    />
                  </svg>
                </div>
                <div
                  aria-label="Zoom out"
                  className="zoom-out-button rectangle-zoom"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Zoom out"
                >
                  <svg
                    className="icon"
                  >
                    <use
                      href="#diagramIcons_zoomOut"
                    />
                  </svg>
                </div>
                <div
                  aria-label="Zoom to fit"
                  className="zoom-target-button rectangle-zoom"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Zoom to fit"
                >
                  <svg
                    className="icon_target"
                  >
                    <use
                      href="#diagramIcons_zoomTarget"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResourceOverview ResourceOverview renders spinner 1`] = `
<div
  className="overview-content"
  id="resource-overview"
>
  <div
    className="app-info-and-dashboard-links"
  >
    <span
      className="app-info-and-dashboard-links-separator-f"
    />
  </div>
  <div
    className="overview-content-bottom overview-content-with-padding"
  >
    <div
      className="overview-content-header"
    >
      Resource highlights
    </div>
    <div
      className="overview-cards-info-container"
    >
      <div
        className="overview-cards-info single-app"
      >
        <div
          className="single-card card-margin"
          id="0_overviewCardsData"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="card-count"
          >
            0
          </div>
          <div
            className="card-type"
          >
            Subscriptions
          </div>
          <div
            className="card-text"
          >
            On hub cluster
          </div>
          
          
          
        </div>
        <div
          className="column-divider"
        />
        <div
          className="single-card card-margin"
          id="1_overviewCardsData"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="card-count"
          >
            0
          </div>
          <div
            className="card-type"
          >
            Managed clusters
          </div>
          <div
            className="card-text"
          >
            0 Total subscriptions
          </div>
          
          
          
        </div>
        <div
          className="column-divider"
        />
        <div
          className="single-card card-margin"
          id="2_overviewCardsData"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="card-count"
          >
            0
          </div>
          <div
            className="card-type"
          >
            Pods
          </div>
          <div
            className="card-text"
          />
          
          
          
        </div>
      </div>
    </div>
  </div>
  <div
    className="overview-content-bottom overview-content-with-padding"
  >
    <div
      className="resourceDiagramSourceContainer"
    >
      <div
        className="topology-controls"
      >
        <div
          className="topology-control-container"
        >
          <div
            id="search-textbox-portal-id"
          />
        </div>
      </div>
      <div
        className="resource-toolbar"
        id="resource-toolbar"
      >
        <div
          className="resource-toolbar-container"
        >
          <div
            className="resource-toolbar-buttons"
          >
            <div
              id="assorted-filter-open-portal-id"
            />
          </div>
          <div
            id="assorted-filter-close-portal-id"
          />
        </div>
      </div>
      <div
        className="resourceDiagramControlsContainer"
      >
        <div
          className="diagram-title"
        >
          Resource topology
          <svg
            className="diagram-title-divider"
          >
            <rect />
          </svg>
          <span
            className="how-to-read-text"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            How to read topology
            <svg
              className="how-to-read-icon"
            >
              <use
                href="#diagramIcons_sidecar"
              />
            </svg>
          </span>
        </div>
        <div
          className="topologyDiagramContainer"
        >
          <div
            className="refresh-time-div"
          >
            <div
              className="refresh-time-container"
            >
              <div
                className="reloading-container"
              >
                <div
                  aria-live="assertive"
                  className="bx--loading bx--loading--small"
                >
                  <svg
                    className="bx--loading__svg"
                    viewBox="-75 -75 150 150"
                  >
                    <circle
                      cx="0"
                      cy="0"
                      r="37.5"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="refresh-time-selection"
              >
                <div
                  aria-label="Refresh"
                  className="button"
                  id="refreshButton"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Refresh"
                >
                  <svg
                    className="button-icon"
                  >
                    <use
                      href="#diagramIcons_autoRefresh"
                    />
                  </svg>
                </div>
                <div
                  aria-label="Choose refresh"
                  className="bx--dropdown selection bx--list-box"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="listbox"
                  tabIndex="0"
                >
                  <div
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="open menu"
                    className="bx--list-box__field"
                    data-toggle={true}
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    tabIndex="0"
                    type="button"
                  >
                    <span
                      className="bx--list-box__label"
                      htmlFor="refreshDropdown-input"
                    >
                      Disable refresh
                    </span>
                    <div
                      className="bx--list-box__menu-icon"
                    >
                      <svg
                        alt="Open menu"
                        aria-label="Open menu"
                        fillRule="evenodd"
                        height="5"
                        role="img"
                        viewBox="0 0 10 5"
                        width="10"
                      >
                        <title>
                          Open menu
                        </title>
                        <path
                          d="M0 0l5 4.998L10 0z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                Last update: {0}
              </div>
            </div>
          </div>
          <div
            className="diagramViewerDiagram"
          >
            <div
              className="diagramViewerContainerContainer"
              id="diagram-viewer-container-container"
            >
              <div
                aria-label="zoom"
                className="diagramViewerContainer"
                role="region"
                style={
                  Object {
                    "height": "100%",
                    "width": "100%",
                  }
                }
              >
                <svg
                  className="topologyDiagram"
                  id="topologySvgId"
                />
              </div>
              <div
                className="secondaryLoad"
              >
                <div
                  aria-live="assertive"
                  className="bx--loading"
                >
                  <svg
                    className="bx--loading__svg"
                    viewBox="-75 -75 150 150"
                  >
                    <circle
                      cx="0"
                      cy="0"
                      r="37.5"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="layoutLoadingContainer"
              >
                <div
                  aria-live="assertive"
                  className="bx--loading"
                >
                  <svg
                    className="bx--loading__svg"
                    viewBox="-75 -75 150 150"
                  >
                    <circle
                      cx="0"
                      cy="0"
                      r="37.5"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <span
              className="diagramControls"
            >
              <div
                className="diagram-controls"
              >
                <div
                  aria-label="Zoom in"
                  className="zoom-in-button rectangle-zoom"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Zoom in"
                >
                  <svg
                    className="icon"
                  >
                    <use
                      href="#diagramIcons_zoomIn"
                    />
                  </svg>
                </div>
                <div
                  aria-label="Zoom out"
                  className="zoom-out-button rectangle-zoom"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Zoom out"
                >
                  <svg
                    className="icon"
                  >
                    <use
                      href="#diagramIcons_zoomOut"
                    />
                  </svg>
                </div>
                <div
                  aria-label="Zoom to fit"
                  className="zoom-target-button rectangle-zoom"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex="0"
                  title="Zoom to fit"
                >
                  <svg
                    className="icon_target"
                  >
                    <use
                      href="#diagramIcons_zoomTarget"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
